[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-feedback-mcp"
version = "0.1.1" 
description = "MCP server for interactive user feedback and command execution in AI-assisted development, by Fábio Ferreira."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
]

[project.scripts]
interactive-feedback-stdio = "server:main_stdio_server"

[tool.setuptools]
py-modules = ["server"]
